<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearFragmentFilterWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_bottom_sheet_bg"
    android:orientation="vertical"
    android:paddingStart="@dimen/dimen_20"
    android:paddingEnd="@dimen/dimen_20">

    <View
        android:id="@+id/topLine"
        android:layout_width="44dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@color/city_text_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:layout_marginBottom="@dimen/dimen_15"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollFragmentFilterWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearScrollFragmentFilterWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textLocationFilterType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_marginBottom="@dimen/dimen_15"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupLocationFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textPriceFilterType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginBottom="@dimen/dimen_15"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textCurrentMinimum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearDiscountWrapper"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/min_price"
                android:textColor="@color/city_text_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textCurrentMaximum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearDiscountWrapper"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dimen_5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/max_price"
                android:textColor="@color/city_text_color" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/sliderPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="100"
                app:haloColor="@color/colorPrimary"
                app:tickColor="@color/colorPrimary"
                app:trackColor="@color/colorPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</LinearLayout>